--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
 
         </div>
     </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream-big</h2>
+                <h2>Become a web developer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta incidunt quam ratione magni. Cum,
+                    nesciunt molestias exercitationem quis suscipit placeat.</p>
+                <a class="anchor-button" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
