--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color"> jhankar Mahabub</span> World!</h1>
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -45,6 +45,35 @@
                 <a class="anchor-button" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experince</h1>
+        <div class="flexible-container">
+            <div id="full-stack-web" class="experience-item">
+                <h2>Full Stack Web Developer</h1>
+                    <h3 class="orange-color">2022-present | pro Lovel web developer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ducimus, qui blanditiis
+                        perferendis
+                        consectetur omnis rerum at quia, incidunt temporibus asperiores recusandae hic repudiandae esse
+                        error
+                        alias possimus quidem molestiae?</p>
+            </div>
+
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby web developer</h1>
+                    <h3 class="orange-color">2022-2024 | Hero Learning</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum vitae non sint ut ea. Inventore
+                        consequuntur
+                        aperiam pariatur, odit hic cupiditate dicta voluptates aliquid quae, totam aliquam doloremque
+                        voluptatem
+                        nostrum.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
+
 </body>
 
 </html>
